pixmapdir = $(datadir)/pixmaps/@PACKAGE@

pixmap_DATA =	\
	clear.png	\
	emblem-new.png	\
	go-bottom.png	\
	go-down.png	\
	go-first.png	\
	go-home.png	\
	gohome.png	\
	go-jump.png	\
	go-last.png	\
	go-next.png	\
	go-previous.png	\
	go-top.png	\
	go-up.png	\
	non-starred.png	\
	person.png	\
	search.png	\
	star.png	\
	starred.png	\
	weather-clear-night.png	\
	weather-clear.png	\
	$(NULL)
