pixmapsdir = $(datadir)/pixmaps/@PACKAGE@

pixmaps_DATA =	\
	missing.png \
	read.png \
	unread.png \
	reply.png \
	close.png \
	clear.png \
	emblem-new.png \
	back.png \
	go-bottom.png \
	go-down.png \
	go-first.png \
	go-home.png \
	gohome.png \
	go-jump.png \
	go-last.png \
	go-next.png \
	go-previous.png \
	go-top.png \
	go-up.png \
	Makefile
	Makefile.am
	Makefile.in
	non-starred.png \
	person.png \
	search.png \
	star.png \
	starred.png \
	weather-clear-night.png \
	weather-clear.png \
	$(NULL)
